Fix input z-index in jquery dialog
Overrides TW bootstrap's default css.

--- a/autonomie/static/css/main.css
+++ b/autonomie/static/css/main.css
@@ -218,3 +218,6 @@ form.deform{
 .form-actions{
   margin-bottom:5px;
 }
+.input-append input:focus{
+  z-index:auto;
+}
